--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "log4js": "^6.1.2",
     "node-cron": "^2.0.3",
     "node-unzip-2": "^0.2.8",
     "request": "^2.88.0",
