--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.6.1",
+    "canvas-constructor": "^3.1.0",
     "discord.js": "^11.5.1",
     "log4js": "^6.1.2",
     "node-cron": "^2.0.3",
