--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "canvas": "^2.6.1",
-    "canvas-constructor": "^3.1.0",
-    "discord.js": "^11.5.1",
-    "log4js": "^6.1.2",
+    "canvas-constructor": "^3.2.0",
+    "discord.js": "^12.2.0",
+    "log4js": "^6.2.1",
     "node-cron": "^2.0.3",
     "node-unzip-2": "^0.2.8",
-    "request": "^2.88.0",
-    "rimraf": "^3.0.0",
+    "request": "^2.88.2",
+    "rimraf": "^3.0.2",
     "zip-folder": "^1.0.0"
   }
 }
