🏵😀 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "zip-folder": "^1.0.0",
-    "pg": "^8.2.1"
+    "keyv": "^4.0.1",
+    "@keyv/sqlite": "^2.0.2"
   }
 }
