👸☺️ Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "log4js": "^6.3.0",
     "rimraf": "^3.0.2",
     "request": "^2.88.2",
-    "node-cron": "^2.0.3",
+    "node-cron": "^3.0.0",
     "zip-folder": "^1.0.0",
-    "discord.js": "^12.5.0",
+    "discord.js": "^12.5.1",
     "node-unzip-2": "^0.2.8",
     "@keyv/sqlite": "^2.0.2",
     "@keyv/postgres": "kinji2532/keyv-postgres#master",
     "canvas-constructor": "^4.1.0",
     "line.js": "^4.3.11",
-    "python-shell": "^2.0.3"
+    "python-shell": "^2.0.3",
+    "mcnbt": "^1.0.0"
   }
 }
