--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "request": "^2.88.2",
     "node-cron": "^3.0.0",
     "zip-folder": "^1.0.0",
-    "discord.js": "^12.5.1",
+    "discord.js": "^12.5.2",
     "node-unzip-2": "^0.2.8",
-    "@keyv/sqlite": "^2.0.2",
-    "@keyv/postgres": "kinji2532/keyv-postgres#master",
     "canvas-constructor": "^4.1.0",
-    "python-shell": "^2.0.3",
-    "node-nbt": "^1.0.0"
+    "python-shell": "^3.0.0",
+    "node-nbt": "^1.0.0",
+    "@keyv/postgres": "^1.0.16"
   }
 }
