--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "canvas-constructor": "^4.1.0",
     "python-shell": "^3.0.0",
     "node-nbt": "^1.0.0",
-    "@keyv/postgres": "^1.0.16"
+    "@keyv/postgres": "^1.0.16",
+    "pg": "^8.4.2"
   }
 }
