--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "request": "^2.88.2",
     "node-cron": "^3.0.0",
     "zip-folder": "^1.0.0",
-    "discord.js": "^13.x",
+    "discord.js": "discordjs/discord.js#master",
     "node-unzip-2": "^0.2.8",
     "canvas-constructor": "^4.1.0",
     "python-shell": "^3.0.0",
