--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-nbt": "^1.0.0",
     "@keyv/postgres": "kinji2532/keyv-postgres#master",
     "pg": "^8.6.0",
-    "discord-buttons": "^3.2.1"
+    "discord-buttons": "^4.0.0",
+    "prismarine-nbt": "^1.6.0"
   }
 }
