--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "python-shell": "^3.0.0",
     "node-nbt": "^1.0.0",
     "pg": "^8.6.0",
-    "prismarine-nbt": "^1.6.0"
+    "prismarine-nbt": "^1.6.0",
+    "@keyv/postgres": "^1.0.16"
   }
 }
